# mobile-deep-learning

./: .gitignore
app/: build.gradle
app/src/androidTest/java/com/demon/deeplearn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/baidu/src/: mdl_jni.cpp
app/src/main/java/com/baidu/mdl/demo/: MDL.java  MainActivity.java
app/src/test/java/com/demon/deeplearn/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
